<resources>
    <string name="app_name" translatable="false">Matriz de Risco PT</string>
    <string name="risk_matrix_fragment_title">Risk Matrix</string>
    <string name="risk_matrix_fragment_date">Date</string>
    <string name="risk_matrix_fragment_national">National</string>
    <string name="risk_matrix_fragment_continent">Continent</string>
    <string name="risk_matrix_fragment_transmission_rate">R(t)</string>
    <string name="risk_matrix_fragment_cases_per_100k">Cases per 100k inhabitants</string>
    <string name="report_fragment_title">Report</string>
    <string name="vaccination_fragment_title">Vaccination</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="daily_cases_title">Daily new cases</string>
    <string name="settings_language">Language:</string>
    <string name="settings_portuguese">Português</string>
    <string name="settings_english">English</string>
    <string name="settings_night_mode">Night mode</string>
    <string name="settings_daily_notification">Daily notification</string>
    <string name="settings_about">About</string>
    <string name="settings_version">Version: %s</string>
    <string name="settings_github_repository"><p>Source code Github: <a href="https://github.com/sousajrps/covid19pt/">here</a>.</p></string>
    <string name="settings_dgs_status_reports_report"><p>DGS Status Report: <a href="https://covid19.min-saude.pt/relatorio-de-situacao/">here</a>.</p></string>
    <string name="settings_dgs_vaccination_report"><p>DGS vaccination report: <a href="https://covid19.min-saude.pt/relatorio-de-vacinacao/">here</a>.</p></string>
    <string name="settings_covid19pt_data"><p>Github covid19pt-data: <a href="https://github.com/dssg-pt/covid19pt-data">here</a>.</p></string>
    <string name="settings_icons">Some of the icons in this app are provided and under the free license of <a href="https://www.flaticon.com/">FlatIcon</a>.</string>
    <string name="settings_disclaimer">
                    This application aims to provide in an easy and intuitive way detailed information about the status of the COVID-19 pandemic in Portugal.
                    The data presented is official and comes from the Direção Geral da Saúde, using Github repository dssg-pt/covid19pt-data as source.
    </string>
    <string name="report_confirmed">Confirmed</string>
    <string name="report_active">Active</string>
    <string name="report_recovered">Recovered</string>
    <string name="report_deaths">Deaths</string>
    <string name="report_surveillance">Surveillance</string>
    <string name="report_hospitalized">Hospitalized</string>
    <string name="report_hospitalized_icu">Hospitalized ICU</string>
    <string name="report_total">Total</string>
    <string name="report_variation">Variation</string>
    <string name="report_title_label">Daily report: %s</string>
    <string name="report_hospitalizes_evolution_title">Hospitalized evolution</string>
    <string name="report_total_cases_evolution_title">Total cases evolution</string>
    <string name="vaccination_chart_legend_two_doses">Immunized</string>
    <string name="vaccination_chart_legend_one_dose">First dose</string>
    <string name="vaccination_chart_legend_unvaccinated">Unvaccinated</string>
    <string name="vaccination_title_label">Daily Vaccination report: %s</string>
    <string name="vaccination_title_weekly_label">Weekly Vaccination report: %s</string>
    <string name="vaccination_total_chart_title">Percentage of the vaccinated population</string>
    <string name="vaccination_one_dose">First dose</string>
    <string name="vaccination_second_dose">Second dose</string>
    <string name="vaccination_total_doses">Total doses</string>
    <string name="vaccination_age_group0_17" translatable="false">0 - 17</string>
    <string name="vaccination_age_group18_24" translatable="false">18 - 24</string>
    <string name="vaccination_age_group25_49" translatable="false">25 - 49</string>
    <string name="vaccination_age_group50_64" translatable="false">50 - 64</string>
    <string name="vaccination_age_group65_79" translatable="false">65 - 79</string>
    <string name="vaccination_age_group80_plus" translatable="false">>= 80</string>
    <string name="vaccination_age">Age</string>
    <string name="vaccination_1st_dose">1st dose</string>
    <string name="vaccination_2nd_dose">2nd dose</string>
    <string name="vaccination_received">Received</string>
    <string name="vaccination_distributed">Distributed</string>
    <string name="vaccination_total_doses_chart_title">Total doses distributed</string>
    <string name="vaccination_daily_doses_chart_title">Daily doses distributed</string>
    <string name="expand">Expand</string>
    <string name="marker_label" translatable="false">%s\n%s</string>
    <string name="default_notification_channel_id" translatable="false">general</string>
    <string name="notification_topic_general" translatable="false">general</string>
    <string name="notification_topic_daily_report" translatable="false">dailyReport</string>
</resources>
