<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_half">

        <TextView
            android:id="@+id/language_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_language"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/language_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_tv">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/portuguese_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_portuguese"
                android:textColor="@color/textColor" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/english_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_english"
                android:textColor="@color/textColor" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor"
            app:layout_constraintTop_toBottomOf="@+id/language_rg" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/night_mode_switchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_night_mode"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_rg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor"
            app:layout_constraintTop_toBottomOf="@+id/night_mode_switchButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
