<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/vaccination_total_doses_chart_title"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_half"
        android:background="@drawable/box_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv"
        app:layout_goneMarginTop="0dp" />

    <ImageView
        android:id="@+id/back_arrow_iv"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:contentDescription="@string/app_name"
        android:paddingStart="@dimen/margin_half"
        android:paddingEnd="@dimen/margin_half"
        android:scaleType="center"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/toolTipText" />

    <TextView
        android:id="@+id/title_full_screen_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/daily_cases_title"
        android:textColor="@color/toolTipText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/back_arrow_iv"
        app:layout_constraintStart_toEndOf="@id/back_arrow_iv"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/expand_iv"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin_half"
        android:background="@color/toolTipBackground"
        android:contentDescription="@string/expand"
        android:padding="2dp"
        android:src="@drawable/ic_baseline_zoom_out_map_24"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_chart"
        app:tint="@color/toolTipText" />

</androidx.constraintlayout.widget.ConstraintLayout>
